force-app/main/default/objects/Account/fields/Number_of_trained_Partner_contacts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_trained_Partner_contacts__c</fullName>
    <label>Number of trained Partner contacts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>