force-app/main/default/objects/Account/fields/Partner_Active_Pipeline_Value__c.field-meta.xml
<CustomField>
    <fullName>Partner_Active_Pipeline_Value__c</fullName>
    <label>Partner Active Pipeline Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>