force-app/main/default/objects/Account/fields/Partner_Budget__c.field-meta.xml
<CustomField>
    <fullName>Partner_Budget__c</fullName>
    <label>Partner Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>