force-app/main/default/objects/Account/fields/Partner_Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Partner_Contract_End_Date__c</fullName>
    <label>Partner Contract End Date</label>
    <type>Date</type>
</CustomField>