force-app/main/default/objects/Account/fields/Partner_Geo_Location__c.field-meta.xml
<CustomField>
    <fullName>Partner_Geo_Location__c</fullName>
    <label>Partner Geo Location</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>