force-app/main/default/objects/Account/fields/Partner_Status__c.field-meta.xml
<CustomField>
    <fullName>Partner_Status__c</fullName>
    <label>Partner Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>