force-app/main/default/objects/Account/fields/Partner_Training_Completed__c.field-meta.xml
<CustomField>
    <fullName>Partner_Training_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partner Training Completed ?</label>
    <type>Checkbox</type>
</CustomField>