force-app/main/default/objects/Account/fields/Partner_Type_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Partner_Type_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Type</label>
    <referenceTo>Partner_Type__c</referenceTo>
    <relationshipLabel>Partner Type</relationshipLabel>
    <relationshipName>PartnerTypes</relationshipName>
    <type>Lookup</type>
</CustomField>