force-app/main/default/objects/Account/fields/Partner_WebSite__c.field-meta.xml
<CustomField>
    <fullName>Partner_WebSite__c</fullName>
    <label>Partner WebSite</label>
    <type>Url</type>
</CustomField>